--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -7,23 +7,19 @@
   font-size: 200%;  
 }
 
-.complete .itemText {
-  text-decoration: line-through;
-}
 
 #completedColumn {
-  width: 90px;
-  background-color: red;
-
+  width: 60px;
 }
 
 .completeBtn {
   display: inline-block;
-  width: 25px;
-  height: 25px;
+  width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid 3px blue;
-  border-radius: 4px;
+  border: solid 10px green;
+  border-radius: 50%;
+  font-size: 300%;
 }
