--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -18,6 +18,7 @@ li {
 }
 
 .completeBtn {
+  font-family: 'Indie Flower', cursive;
   float: left;
   display: inline-flex;
   width: 50px;
@@ -40,5 +41,9 @@ li {
 }
 
 .deleteBtn {
+  float: right;
+}
+
+.confirmationInterface {
   float: right;
 }
