--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,6 +1,3 @@
-.complete {
-  background-color: rgb(183, 241, 183);
-}
 
 .itemText {
   font-family: 'Indie Flower', cursive;
@@ -31,12 +28,7 @@ li {
   align-items: center;
 }
 
-.confirmationInterface {
-  float: right;
-}
-
 .itemDiv {
-  border: solid 1px black;
   display: flex;
   align-items: center;
   width: 100%;
@@ -50,4 +42,16 @@ li {
 
 #inputRow {
   padding: 25px;
+}
+
+li:nth-child(odd) {
+  background-color: #CCC;
+}
+
+.complete:nth-child(odd) {
+  background-color: rgb(183, 241, 183);
+}
+
+.complete:nth-child(even) {
+  background-color: rgb(211, 248, 211);
 }
