--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -32,7 +32,7 @@ li {
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .container {
@@ -49,10 +49,34 @@ li:nth-child(odd) {
   background-color: #CCC;
 }
 
+.overdue:nth-child(odd) {
+  background-color: rgb(255, 182, 182);
+}
+
+.overdue:nth-child(even) {
+  background-color: rgb(255, 225, 225);
+}
+
 .complete:nth-child(odd) {
   background-color: rgb(183, 241, 183);
 }
 
 .complete:nth-child(even) {
   background-color: rgb(211, 248, 211);
+}
+
+#todoIn {
+  width: 300px;
+}
+
+.dueDate {
+  font-size: 50%;
+}
+
+.itemText {
+  display: block;
+}
+
+.redBorder {
+  border-color: rgb(187, 67, 67)
 }
